--- a/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="ls.locale.country_setup.page_title_edit">
+  <page-content-header [contentTitle]="(!isDetail) ? ls.locale.country_setup.page_title_edit : ls.locale.country_setup.page_title_index">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
@@ -11,7 +11,7 @@
         <form [formGroup]="formCountry">
 
           <div class="ayo-top" fxLayout="row" fxLayoutAlign="space-between center">
-            <h1>{{ ls.locale.country_setup.page_title_edit }}</h1>
+            <h1>{{ (!isDetail) ? ls.locale.country_setup.page_title_edit : ls.locale.country_setup.page_title_index }}</h1>
             <mat-form-field
               [class]="formCountry.get('status').value === 'active' ? 'radius-select green' : 'radius-select red'">
               <mat-select formControlName="status">
