--- a/src/app/pages/user-management/country-setup/recursive-slide-toggle/recursive-slide-toggle.component.html
+++ b/src/app/pages/user-management/country-setup/recursive-slide-toggle/recursive-slide-toggle.component.html
@@ -8,7 +8,7 @@
         <mat-slide-toggle class="example-margin" [color]="'primary'" formControlName="checked" (change)="onChange($event, item, depth)"></mat-slide-toggle>
       </div>
       <ng-container *ngIf="item.get('children')?.length">
-        <recursive-slide-toggle [items]="item.get('children').controls" [depth]="depth+1"></recursive-slide-toggle>
+        <recursive-slide-toggle [items]="item.get('children').controls" [depth]="depth+1" [horizontal]="horizontal"></recursive-slide-toggle>
       </ng-container>
 
     </div>
