--- a/src/app/pages/user-management/language-setup/dialog-upload-language/dialog-upload-language.component.html
+++ b/src/app/pages/user-management/language-setup/dialog-upload-language/dialog-upload-language.component.html
@@ -104,7 +104,7 @@
         </div>
         <div fxFlex fxLayoutAlign="end center">
           <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="uploading || !isValid">{{ls.locale.global.button.send}}</button>
+          [disabled]="uploading">{{ls.locale.global.button.send}}</button>
         </div>
       </div>
     </div>
