cde-4388 update status and button

--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.html
@@ -89,19 +89,19 @@
     </div>
 
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="end center">
-      <button mat-raised-button type="button" [ngClass]="{'disabled-1': disabled}" class="publish-button" fxFlex="30" fxFlex.gt-xs="20" (click)="confirmUpdateStatusVoucher()" *ngIf="detailVoucher?.status == 'draft' && coba == 0">
+      <button mat-raised-button type="button" [ngClass]="{'disabled-1': !detailVoucher?.action.is_allowed}" class="publish-button" fxFlex="30" fxFlex.gt-xs="20" (click)="confirmUpdateStatusVoucher()" *ngIf="detailVoucher?.status == 'accept'">
         PUBLISH
       </button>
-      <button mat-raised-button type="button" class="save-button" fxFlex="30" fxFlex.gt-xs="20" (click)="save()" *ngIf="coba == 1">
+      <button mat-raised-button type="button" class="save-button" fxFlex="30" fxFlex.gt-xs="20" (click)="saveAndApproval('save setting')" *ngIf="detailVoucher?.status == 'draft'">
         SAVE SETTING
       </button>
-      <button mat-raised-button type="button" class="publish-button" fxFlex="30" fxFlex.gt-xs="20" (click)="processApproval()" *ngIf="coba == 2">
+      <button mat-raised-button type="button" class="publish-button" fxFlex="30" fxFlex.gt-xs="20" (click)="saveAndApproval('process to approval')" *ngIf="detailVoucher?.status == 'draft_saved' || detailVoucher?.status == 'reject'">
         PROCESS TO APPROVAL
       </button>
-      <button mat-raised-button type="button" [ngClass]="{'disabled-1': disabled}" class="publish-button"  fxFlex="30" fxFlex.gt-xs="20" (click)="approveReject('Approve')" *ngIf="coba == 3">
+      <button mat-raised-button type="button" [ngClass]="{'disabled-1': !detailVoucher?.action.is_allowed}" class="publish-button"  fxFlex="30" fxFlex.gt-xs="20" (click)="approveReject('Approve')" *ngIf="detailVoucher?.status == 'need_approval'">
         APPROVE
       </button>
-      <button mat-raised-button type="button" [ngClass]="{'disabled-2': disabled}" class="reject-button"  fxFlex="30" fxFlex.gt-xs="20" (click)="approveReject('Reject')" *ngIf="coba == 3">
+      <button mat-raised-button type="button" [ngClass]="{'disabled-2': !detailVoucher?.action.is_allowed}" class="reject-button"  fxFlex="30" fxFlex.gt-xs="20" (click)="approveReject('Reject')" *ngIf="detailVoucher?.status == 'need_approval'">
         REJECT
       </button>
     </div>
