--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
@@ -68,6 +68,7 @@ button.publish-button {
   background-color: #038d0e;
   color: #fff;
   font-weight: 300;
+  padding: 0;
 }
 button.save-button {
   background-color: #FFC000;
