--- a/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
+++ b/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
@@ -3,7 +3,7 @@
   <page-content-header [contentTitle]="ls.locale.cn_reward.b2c_voucher.text1">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/b2c-voucher','create']">
+        [routerLink]="['/b2c-voucher','create']" *ngIf="permission?.buat">
         <mat-icon>add</mat-icon> {{ ls.locale.global.button.add }}
       </button>
     </div>
