--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
@@ -83,6 +83,7 @@ button.reject-button {
 }
 button.disabled-1 {
   background-color: #5A5A5A;
+  color: #fff;
 }
 button.disabled-2 {
   background-color: #808080;
