--- a/src/app/pages/user-management/country-setup/recursive-slide-toggle/recursive-slide-toggle.component.html
+++ b/src/app/pages/user-management/country-setup/recursive-slide-toggle/recursive-slide-toggle.component.html
@@ -4,7 +4,7 @@
 
     <div fxLayout="column">
       <div fxFlex="100" [formGroup]="item" fxLayoutAlign="space-between" [ngStyle]="{'padding-left': (10 * depth)+'px'}">
-        <label for="">{{ item.get('title').value }}</label>
+        <label for="">{{ item.get('name').value }}</label>
         <mat-slide-toggle class="example-margin" [color]="'primary'" formControlName="checked" (change)="onChange($event, item, depth)"></mat-slide-toggle>
       </div>
       <ng-container *ngIf="item.get('children')?.length">
@@ -21,7 +21,7 @@
 
     <div *ngFor="let item of items; let i=index;" fxFlex="45" fxLayout="column">
       <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="space-between center" [formGroup]="item">
-        <label for="">{{ item.get('title').value }}</label>
+        <label for="">{{ item.get('name').value }}</label>
         <mat-slide-toggle class="example-margin" [color]="'primary'" formControlName="checked" (change)="onChange($event, item, depth)"></mat-slide-toggle>
       </div>
     </div>
