--- a/src/app/shared/select-search/select-search.component.html
+++ b/src/app/shared/select-search/select-search.component.html
@@ -1,10 +1,12 @@
 <mat-form-field fxLayout="row wrap" class="select-search is-light form-primary">
   <mat-select
+    panelClass="myPanelClass"
     (selectionChange)="handleSelectionChange($event)"
     [placeholder]="placeholder"
     [value]="value"
     [isScrolledBottom]="isScroll"
     (onScrolledBottom)="handleScroll($event)"
+    disableOptionCentering
     selectSearch
   >
     <ngx-mat-select-search
