--- a/src/app/pages/user-management/country-setup/country-setup.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup.component.html
@@ -57,8 +57,8 @@
             <div class="name-container">
               <p class="status text-truncate h6 p-4"
                 style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
-                [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{row.status == 'active' ? ls.locale.global.label.active : ls.locale.global.label.inactive}}
+                [ngClass]="row.status != 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
+                {{row.status != 'active' ? ls.locale.global.label.active : ls.locale.global.label.inactive}}
               </p>
             </div>
           </ng-template>
@@ -72,7 +72,7 @@
               <button mat-icon-button fxFlex *ngIf="permission?.hapus" (click)="delete(row)">
                 <mat-icon class="secondary-text">delete</mat-icon>
               </button>
-              
+
               <button mat-icon-button fxFlex *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
