fix notes retailer

--- a/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
@@ -170,7 +170,7 @@
             [resizeable]="false"
             [sortable]="false"
           >
-            <ng-template
+            <!-- <ng-template
               ngx-datatable-header-template
               let-value="value"
               let-allRowsSelected="allRowsSelected"
@@ -180,7 +180,7 @@
                 [checked]="setAllSelected(allRowsSelected)"
                 (change)="selectFn(!allRowsSelected)"
               ></mat-checkbox>
-            </ng-template>
+            </ng-template> -->
             <ng-template
               ngx-datatable-cell-template
               let-row="row"
